# plugin-image

./: .gitignore  BREAKAGE_LOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: ci.yml  publish-state.yml  publish.yml
glue/: manifest.json  package.json  tsup.config.ts
glue/src/: activate.ts  crop-machine.ts  crop-tool.ts  decode-pool.ts  decode-worker.ts  engine.ts  index.ts  session.ts  tile-provider.ts
glue/src/panels/: image-panel.tsx
glue/test/: activate.spec.ts  crop.spec.ts  decode-pool.spec.ts  helpers.ts  session.spec.ts  tile-provider.spec.ts
image-cms/: Cargo.toml
image-cms/src/: interner.rs  lib.rs  lut.rs  moxcms_engine.rs  qcms_engine.rs
image-cms/tests/: cmyk_lane.rs  parity.rs  print_lane.rs
image-codecs/: Cargo.toml
image-codecs/src/: bytesource.rs  exif.rs  lib.rs  raw.rs  source.rs  target.rs
image-codecs/src/jpeg/: decode.rs  encode.rs  mod.rs
image-codecs/src/png/: decode.rs  encode.rs  mod.rs
image-conformance/: Cargo.toml
image-conformance/benches/: png_d4.rs
image-conformance/src/: compose_ref.rs  device.rs  harness.rs  lib.rs  psd_render.rs  quantize.rs
image-conformance/src/psd_builder/: channels.rs  emit.rs  fixtures.rs  layers.rs  mod.rs
image-conformance/tests/: codec_jpeg.rs  codec_png.rs  dispatch_batch.rs  distance_transform.rs  engine_b_incremental.rs  engine_b_property.rs  family_adjust.rs  family_arithmetic.rs  family_band.rs  family_boolean.rs  family_cast.rs  family_compose.rs  family_conv.rs  family_gen.rs  family_geom.rs  family_linear.rs  family_minmax.rs  family_morph.rs  family_relational.rs  family_resample.rs  golden_expansion.rs  pipeline_async.rs  pipeline_e2e.rs  pipeline_sinks.rs  psd_ecosystem.rs  psd_fixtures.rs  psd_proptest.rs  psd_render.rs  reductions.rs  residency_load.rs  selection_mask.rs
image-core/: Cargo.toml
image-core/src/: crop.rs  curve.rs  format.rs  generation.rs  lib.rs  region.rs  slice.rs  tile.rs  tilemap.rs
image-gpu/: Cargo.toml
image-gpu/src/: device.rs  dispatch.rs  distance.rs  execute.rs  lib.rs  pipeline.rs  pool.rs  reduce.rs  residency.rs  selection.rs
image-graph/: Cargo.toml
image-graph/src/: cache.rs  eval.rs  graph.rs  lib.rs
image-js/: Cargo.toml
image-js/src/: cmyk.rs  ingest.rs  lib.rs  mip.rs
image-js/tests/: ingest.rs
image-kernels/: Cargo.toml  build.rs
image-kernels/src/: abi.rs  family.rs  lib.rs  reference_prelude.rs
image-kernels/src/families/: adjust.rs  arithmetic.rs  band.rs  boolean.rs  cast.rs  compose.rs  conv.rs  gen.rs  geom.rs  linear.rs  minmax.rs  mod.rs  morph.rs  relational.rs  resample.rs
image-kernels/tests/: wgsl_validate.rs
image-pipeline/: Cargo.toml
image-pipeline/src/: cache.rs  lib.rs  node.rs  region_prop.rs  schedule.rs  shrink.rs  sink.rs
image-psd/: Cargo.toml
image-psd/src/: composite.rs  container.rs  edit.rs  emit.rs  lib.rs  parse.rs  reader.rs  writer.rs
image-psd/src/compression/: mod.rs  packbits.rs
image-psd/src/model/: addl.rs  channel.rs  color_mode.rs  header.rs  layers.rs  mod.rs  resources.rs
image-psd/tests/: channel_decode.rs  composite.rs  mutatable.rs  padding.rs  psb.rs  roundtrip.rs
manifest/: manifest.json  package.json
manifest/panels/: image-adjustments.panel.json
registry/: cms.yaml  codecs.yaml  kernels.yaml  psd-blocks.yaml
scripts/: build-wasm.sh  check-contract-imports.mjs
