# paged.image — Rust workspace. Crates live at REPO TOP LEVEL per the
# spec (§4 of thoughts/docs/paged/plugin-image/base-idea.md), not under
# crates/. references/ is NEVER a member (read-only clean-room mounts).
[workspace]
resolver = "2"
members = [
    "image-core",
    "image-kernels",
    "image-gpu",
    "image-pipeline",
    "image-graph",
    "image-cms",
    "image-codecs",
    "image-psd",
    "image-js",
    "image-conformance",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.93"
license = "MPL-2.0 OR LicenseRef-PMEL"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
needless_pass_by_value = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
pollster = "0.4"
wgpu = "29.0.1"
naga = { version = "29", features = ["wgsl-in"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
qcms = { version = "0.3", default-features = false, features = ["cmyk", "iccv4-enabled"] }
