[package]
name = "image-codecs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "paged.image codec adapter contract (ImageSource/ImageTarget over sans-IO ByteSource) + format adapters. Codecs are inherently CPU work (spec §10.2)."

[lints]
workspace = true

[dependencies]
image-core = { path = "../image-core" }
thiserror = { workspace = true }
# D-4 winner (zune-png vs image-rs/png; bench in image-conformance):
# zune-png. Pure-Rust decode+encode, no_std-capable, fastest decode and
# competitive encode in the synthetic sweep. Provisional until the Links
# corpus audit (pre-M1 freeze) — see registry/codecs.yaml.
zune-png = { workspace = true }
zune-core = { workspace = true }
