[package]
name = "image-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "paged.image frozen core types: PixelFormat, Tile/TileMap, Region, slices. Leaf crate — depends on nothing in the workspace."

[lints]
workspace = true

[dependencies]
